fixed css for front view spacing and blockquotes

--- a/gp.css
+++ b/gp.css
@@ -74,6 +74,9 @@ sup {
   font-size:85%;
 }
 
+body.html blockquote { padding-left: 1.9em; padding-right:1.9em; font-style: italic; }
+body.html blockquote p { margin: 0 0 .8em; }
+
 
 @media all and (max-width: 739px) {
   .responsive-layout-mobile .block-commerce-cart {
@@ -136,7 +139,7 @@ sup {
     box-sizing: border-box;
     float: left;
     height: 260px;
-    margin: 0.5em 0.6em;
+    margin: 0.5em;
     padding: 10px 0 20px;
     text-align: center;
     max-width: 149px;
